[ Mac wk1 ] 2 media-capabilities/webrtc tests are flaky failures https://bugs.webkit.org/show_bug.cgi?id=232283 <rdar://problem/84637007>

Reviewed by Eric Carlson.

Source/WebCore:

Migrate WebRTC H265 and VP9 flags from runtime enabled features to page settings.
WK1 and WK2 will call Page::settingsDidChange when updating settings so that these settings are pushed to its LibWebRTCProvider.
This makes sure that in WK1, test runs with the correct settings.

Covered by existing tests.

* page/Page.cpp:
* page/Page.h:
* page/RuntimeEnabledFeatures.h:
* testing/Internals.cpp:

Source/WebKit:

* WebProcess/WebPage/WebPage.cpp:

Source/WebKitLegacy/mac:

* WebView/WebView.mm:

Source/WTF:

* Scripts/Preferences/WebPreferencesExperimental.yaml:

LayoutTests:

* platform/mac-wk1/TestExpectations:



Canonical link: https://commits.webkit.org/243624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284976 268f45cc-cd09-0410-ab3c-d52691b4dbfc